@@ -7,6 +7,8 @@
     fix broken key shortcut New|Link
     new desktop menu; new Devices menu
     fix open folder on desktop reuses browser on wrong desktop
+    use menu key on desktop
+    handle hyphened desktop references #118
 0.8.6   2013-02-13:
     fix cannot create directory or file on CentOS #253
     update russian translation
